fix: text contrast

--- a/app/app.css
+++ b/app/app.css
@@ -16,10 +16,8 @@
   --color-border-dark: #4c5641;
   --color-foreground: #1f2419;
   --color-foreground-muted: #3c4434;
-  --color-foreground-subtle: #596253;
   --color-foreground-dark: #f2f4ee;
   --color-foreground-dark-muted: #c9cebf;
-  --color-foreground-dark-subtle: #9fa197;
   --color-foreground-inverse: #ffffff;
   --color-background-dark: #141b10;
 }
